<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:id="@+id/about_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/aboutGoogleLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/about_title"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:maxLines="5"
            android:text="@string/about_text"
            android:textColor="@color/text"
            android:textSize="16sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_form"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:id="@+id/about_link_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height_default"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:text="@string/about_link_text"
                android:textColor="@color/text"
                android:textSize="16sp" >
            </TextView>

            <Button
                android:id="@+id/btWebsite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height_default"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/about_site_btn"
                android:textColor="@color/text_btn" />

            <TextView
                android:id="@+id/about_email_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height_default"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:maxLines="3"
                android:text="@string/about_email_text"
                android:textColor="@color/text"
                android:textSize="16sp" >
            </TextView>

            <Button
                android:id="@+id/btContact"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height_default"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/about_email_btn"
                android:textColor="@color/text_btn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>